crates/penrose_proc/tests/stub/test-only-attr-works.stderr
error[E0405]: cannot find trait `StubFoo` in this scope
  --> $DIR/test-only-attr-works.rs:11:6
   |
11 | impl StubFoo for MyStruct {}
   |      ^^^^^^^ not found in this scope
